--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Patil-24.github.io/chart-listing",
+  "homepage": "https://patil-24.github.io/chart-listing",
   "name": "card-listing",
   "version": "0.1.0",
   "private": true,
